--- a/MvcModalPOC/Views/Home/Index.cshtml
+++ b/MvcModalPOC/Views/Home/Index.cshtml
@@ -2,30 +2,30 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<h1 class="title">ASP.NET MVC Modal POC</h1>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-sm-6">
+        <h2>Instructions</h2>
+
+        <p>Enter your name and click the submit button.</p>
+        <p>A modal will open, showing your name. </p>
+        <p>In the modal, enter your favorite ice cream and click submit.</p>
+        <p>The parent page will show your favorite ice cream as well as your name.</p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+    <div class="col-sm-6" style="margin-top: 1.5em;">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+
+        <input type="button" value="Open Modal">
     </div>
 </div>
+
+<style>
+    .title {
+        text-align: center;
+        margin-bottom: 1em;
+    }
+
+</style>
