--- a/MvcModalPOC/Views/Home/Index.cshtml
+++ b/MvcModalPOC/Views/Home/Index.cshtml
@@ -2,6 +2,22 @@
     ViewBag.Title = "Home Page";
 }
 
+<style>
+    .title {
+        text-align: center;
+        margin-bottom: 1em;
+    }
+</style>
+
+@*Render JS before the body*@
+@Scripts.Render("~/bundles/jquery")
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        alert("Hello World");
+    });
+</script>
+
 <h1 class="title">ASP.NET MVC Modal POC</h1>
 
 <div class="row">
@@ -22,10 +38,6 @@
     </div>
 </div>
 
-<style>
-    .title {
-        text-align: center;
-        margin-bottom: 1em;
-    }
-
-</style>
+<div class="modal" id="IceCreamModal">
+    <h1>This is my modal</h1>
+</div>
