Instructions and dependencies added.

--- a/MvcModalPOC/Views/Home/Index.cshtml
+++ b/MvcModalPOC/Views/Home/Index.cshtml
@@ -53,12 +53,16 @@
 <div class="row">
     @* Instructions *@
     <div class="col-sm-6">
-        <h3>Instructions</h3>
+        <h4>Instructions</h4>
+        <p>Enter your name and open the modal.</p>
+        <p>A modal will open. Notice that your name is passed into the modal.</p>
+        <p>Enter your favorite ice cream and close the modal.</p>
+        <p>Notice that your name and the modal input data persists.</p>
 
-        <p>Enter your name and click the submit button.</p>
-        <p>A modal will open, showing your name. </p>
-        <p>In the modal, enter your favorite ice cream and click submit.</p>
-        <p>The parent page will show your favorite ice cream as well as your name.</p>
+        @* Dependencies *@
+        <h4 style="margin-top: 1em;">Dependencies</h4>
+        <p>Bootstrap 5.2.3</p>
+        <p>.NET Framework 4.5.2</p>
     </div>
 
     @* Input and Button *@
