The MVC way stubbed.

--- a/MvcModalPOC/Views/Home/MvcWay.cshtml
+++ b/MvcModalPOC/Views/Home/MvcWay.cshtml
@@ -48,7 +48,7 @@
 </script>
 
 <h1 class="title">ASP.NET MVC Modal POC</h1>
-<h2 class="title" style="margin-bottom: 1.5em; background-color: lightgreen;">The JavaScript Way</h2>
+<h2 class="title" style="margin-bottom: 1.5em; background-color: lightblue;">The MVC Way</h2>
 
 <div class="row">
     @* Instructions *@
@@ -80,7 +80,7 @@
 
 <div class="row">
     <div class="col-sm-12 text-center">
-        <a class="btn btn-warning" href="@Url.Action("MvcWay","Home")">Go to the MVC Way</a>
+        <a class="btn btn-warning" href="@Url.Action("JavaScriptWay","Home")">Go to the JavaScript Way</a>
     </div>
 </div>
 
