ID gets passed to the controller.

--- a/MvcModalPOC/Views/Home/IceCreamPartialView.cshtml
+++ b/MvcModalPOC/Views/Home/IceCreamPartialView.cshtml
@@ -1,1 +1,5 @@
-﻿<h1>Ice Cream Partial View</h1>
+﻿@model MvcModalPOC.Models.IceCreamVM
+
+<h1>Ice Cream Partial View</h1>
+
+<p>Your favorite ice cream is @Model.Brand, @Model.Flavor flaor.</p> 
