IceCreamPartialView opens through JS.

--- a/MvcModalPOC/Views/Home/IceCreamPartialView.cshtml
+++ b/MvcModalPOC/Views/Home/IceCreamPartialView.cshtml
@@ -1,5 +1,5 @@
-﻿@model MvcModalPOC.Models.IceCreamVM
+﻿@*@model MvcModalPOC.Models.IceCreamVM*@
 
 <h1>Ice Cream Partial View</h1>
 
-<p>Your favorite ice cream is @Model.Brand, @Model.Flavor flaor.</p> 
+@*<p>Your favorite ice cream is @Model.Brand, @Model.Flavor flaor.</p>*@ 
