--- a/MvcModalPOC/Views/Home/IceCreamPartialView.cshtml
+++ b/MvcModalPOC/Views/Home/IceCreamPartialView.cshtml
@@ -1,5 +1,9 @@
-﻿@*@model MvcModalPOC.Models.IceCreamVM*@
+﻿@model MvcModalPOC.Models.IceCreamVM
 
-<h1>Ice Cream Partial View</h1>
+<div class="row">
+    <div class="col-sm-12">
+        <h3>Ice Cream Partial View</h3>
 
-@*<p>Your favorite ice cream is @Model.Brand, @Model.Flavor flaor.</p>*@ 
+        <p>Your favorite ice cream is @Model.Brand, @Model.Flavor flavor.</p>
+    </div>
+</div>
