--- a/MvcModalPOC/Views/Home/MvcWay.cshtml
+++ b/MvcModalPOC/Views/Home/MvcWay.cshtml
@@ -103,7 +103,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
-            <div id="ModalBodyContainerID">
+            <div id="ModalBodyContainerID" style="margin: 50px;">
 
             </div>
         </div>
