--- a/MvcModalPOC/Views/Home/IceCreamPartialView.cshtml
+++ b/MvcModalPOC/Views/Home/IceCreamPartialView.cshtml
@@ -4,6 +4,7 @@
     <div class="col-sm-12">
         <h3>Ice Cream Partial View</h3>
 
+        <p>Hello @Model.FirstName</p>
         <p>Your favorite ice cream is @Model.Brand, @Model.Flavor flavor.</p>
     </div>
 </div>
