Updated input field.

--- a/MvcModalPOC/Views/Home/JavaScriptWay.cshtml
+++ b/MvcModalPOC/Views/Home/JavaScriptWay.cshtml
@@ -94,7 +94,7 @@
             </div>
 
             <div class="modal-body">
-                <input id="ModalInputId" type="text" placeholder="Enter your first name" class="form-control" style="display: inline;">
+                <input id="ModalInputId" type="text" placeholder="What is your favorite ice cream?" class="form-control" style="display: inline;">
             </div>
 
             <div class="modal-footer">
