--- a/MvcModalPOC/Views/Home/MvcWay.cshtml
+++ b/MvcModalPOC/Views/Home/MvcWay.cshtml
@@ -40,9 +40,8 @@
     <div class="col-sm-6">
         <h4>Instructions</h4>
         <p>Enter your name and open the modal.</p>
-        <p>A modal will open. Notice that your name is passed into the modal.</p>
-        <p>Enter your favorite ice cream and close the modal.</p>
-        <p>Notice that your name and the modal input data persists.</p>
+        <p>Notice that your name is passed into the modal, as well as your favorite ice cream.</p>
+        <p>This occurs because JavaScript is calling the controller's action, which creates a ViewModel and passes it back into a partial view that is nested inside the modal.</p>
 
         @* Dependencies *@
         <h4 style="margin-top: 1em;">Dependencies</h4>
