--- a/MvcModalPOC/Views/Home/JavaScriptWay.cshtml
+++ b/MvcModalPOC/Views/Home/JavaScriptWay.cshtml
@@ -55,9 +55,9 @@
     <div class="col-sm-6">
         <h4>Instructions</h4>
         <p>Enter your name and open the modal.</p>
-        <p>A modal will open. Notice that your name is passed into the modal.</p>
+        <p>Notice that your name is passed into the modal. This occurs because JavaScript is getting the value of your input field prior to opening the modal.</p>
         <p>Enter your favorite ice cream and close the modal.</p>
-        <p>Notice that your name and the modal input data persists.</p>
+        <p>Notice that your name and the modal input data persist. This occurs because JavaScript is tracking your input fields.</p>
 
         @* Dependencies *@
         <h4 style="margin-top: 1em;">Dependencies</h4>
